<resources>
    <string name="app_name">Htory</string>

    <!--공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

    <!--메뉴-->
    <string name="menu_home">홈</string>
    <string name="menu_search">상영 영화</string>
    <string name="menu_matching">매칭</string>
    <string name="menu_mypage">마이페이지</string>

    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>

    <!-- 회원가입 -->
    <string name="signup">회원가입</string>
    <string name="signup_id_hint">아이디(이메일)</string>
    <string name="signup_email_hint">dlfma</string>
    <string name="signup_email_delimiter">\@</string>
    <string name="signup_name_hint">이름</string>
    <string name="signup_password_hint">비밀번호</string>
    <string name="signup_password_confirm_hint">비밀번호 확인</string>
    <string name="hobby_movie_chip">🎬 영화</string>
    <string name="hobby_exercise_chip">🏋️‍♂️ 운동️</string>
    <string name="hobby_exercise_travel">✈️ 여행</string>
    <string name="hobby_exercise_food">🍔 음식</string>



    <string name="select_name_text">선택 장소</string>
    <string name="select_blog_title_text">블로그 제목</string>
    <string name="select_blog_description_text">블로그 내용</string>
    <string name="select_blog_link_text">블로그 링크</string>
    <string name="select_blog_see_more_text">더보기</string>
    <string name="select_blog_postdate_text">작성일 :</string>

</resources>