<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_healing_story_no_string"
    android:elevation="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/radiogroup_hobby"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:button="@null"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rd_btn_hobby1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/montserrat_italic_variablefont_wght"
            android:gravity="center"
            android:tag="1"
            android:text="@string/hobby_movie_chip"
            android:textColor="@color/radio_button_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd_btn_hobby2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:fontFamily="@font/montserrat_italic_variablefont_wght"
            android:gravity="center"
            android:tag="2"
            android:text="@string/hobby_exercise_chip"
            android:textColor="@color/radio_button_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd_btn_hobby3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:fontFamily="@font/montserrat_italic_variablefont_wght"
            android:gravity="center"
            android:tag="3"
            android:text="@string/hobby_exercise_travel"
            android:textColor="@color/radio_button_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd_btn_hobby4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:fontFamily="@font/montserrat_italic_variablefont_wght"
            android:gravity="center"
            android:tag="4"
            android:text="@string/hobby_exercise_food"
            android:textColor="@color/radio_button_selector"
            android:textSize="20sp" />

    </RadioGroup>
    <!-- 네이버 지도를 추가할 FrameLayout -->
    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup_hobby"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>