<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:padding="20dp"
    android:background="@drawable/blog_item_border_background">



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_blog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/select_blog_title_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_italic_variablefont_wght"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_blog_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="2"
        android:text="@string/select_blog_description_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_italic_variablefont_wght"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_blog_title_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_blog_postdate_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:text="@string/select_blog_postdate_text"
        android:fontFamily="@font/montserrat_italic_variablefont_wght"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_blog_description_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_blog_postdate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:maxLines="1"
        android:text="@string/select_blog_postdate_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_italic_variablefont_wght"
        app:layout_constraintBottom_toBottomOf="@+id/item_blog_postdate_text_tv"
        app:layout_constraintStart_toEndOf="@+id/item_blog_postdate_text_tv"
        app:layout_constraintTop_toTopOf="@+id/item_blog_postdate_text_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_blog_bloggerlink_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:maxLines="1"
        android:text="@string/select_blog_see_more_text"
        android:textColor="@color/slateBlue"
        android:textSize="14sp"
        android:textStyle="italic"
        android:fontFamily="@font/montserrat_italic_variablefont_wght"
        app:layout_constraintBottom_toBottomOf="@+id/item_blog_postdate_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_blog_postdate_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
